# TouchGrass

./: .gitignore  CHANGELOG.md  LICENSE  README.md  gestureClassifier.js  handCoordinateMapper.js  handsController.js  index.html  lstmClassifier.js  main.rs  package-lock.json  package.json  renderer.js  style.css  tauri.conf.json  vite.config.js  voxel.rs  voxel.test.js
.github/workflows/: fix_ico.py  release.yml
landing/: index.html
src/: main.js  shaders.js  style.css
src-tauri/: Cargo.toml
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  tri_table.rs
src/lib/: handOverlay.js  trainingUI.js
src/workers/: handTracker.worker.js
tests/: gesture.test.js
