[package]
name = "touchgrass"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[lib]
name = "touchgrass_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "touchgrass"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [
    "shell-open",
    "dialog-save",
    "fs-write-file",
    "fs-read-file",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
